--- a/Seurat tutorial 1 pbmc3k.qmd
+++ b/Seurat tutorial 1 pbmc3k.qmd
@@ -8,7 +8,7 @@ editor: visual
 
 ## pbmc3k - guided clustering tutorial
 
-Original source: <https://github.com/satijalab/seurat/blob/HEAD/vignettes/pbmc3k_tutorial.Rmd>
+Original sources: [R markdown](https://github.com/satijalab/seurat/blob/HEAD/vignettes/pbmc3k_tutorial.Rmd) and [webpage](https://satijalab.org/seurat/articles/pbmc3k_tutorial)
 
 ### Set up the Seurat object
 
@@ -19,8 +19,9 @@ We start by reading in the data. The Read10X() function reads in the output of t
 We next use the count matrix to create a Seurat object. The object serves as a container that contains both data (like the count matrix) and analysis (like PCA, or clustering results) for a single-cell dataset. For more information, check out the [GitHub Wiki](https://github.com/satijalab/seurat/wiki). For example, in Seurat v5, the count matrix is stored in pbmc\[\["RNA"\]\]\$counts.
 
 ```{r}
+#| label: data import
 #| echo: true
-#| eval: false
+#| eval: true
 #| code-copy: true
 
 library(dplyr)
@@ -35,15 +36,126 @@ if (!dir.exists(file.path(work.dir,"pbmc3k_filtered_gene_bc_matrices/filtered_ge
   download.file("https://cf.10xgenomics.com/samples/cell/pbmc3k/pbmc3k_filtered_gene_bc_matrices.tar.gz", destfile = file.path(work.dir,"pbmc3k_filtered_gene_bc_matrices.tar.gz"))
   untar(file.path(work.dir,"pbmc3k_filtered_gene_bc_matrices.tar.gz"), exdir = file.path(work.dir,"pbmc3k_filtered_gene_bc_matrices"))
   file.remove(file.path(work.dir,"pbmc3k_filtered_gene_bc_matrices.tar.gz"))
+  
 }
 
 pbmc.data <- Read10X(data.dir = file.path(work.dir,"pbmc3k_filtered_gene_bc_matrices/filtered_gene_bc_matrices/hg19/"))
 
-# Initialize the Seurat object with the raw (non-normalized data).
+# Initialize the Seurat object with the raw (non-normalized data)
+# Note the min.cells and min.features arguments - these filter out cells with very low gene counts, as well as genes that are detected in very few cells
 pbmc <- CreateSeuratObject(counts = pbmc.data, project = "pbmc3k", min.cells = 3, min.features = 200)
 
 # See the object summary
 pbmc
 ```
 
+### QC and selecting cells for further analysis
+
+Seurat allows you to easily explore QC metrics and filter cells based on any user-defined criteria. A few QC metrics commonly used by the community include:
+
+- The number of unique genes detected in each cell.
+- Low-quality cells or empty droplets will often have very few genes
+- Cell doublets or multiplets may exhibit an aberrantly high gene count
+- Similarly, the total number of molecules detected within a cell (correlates strongly with unique genes)
+- The percentage of reads that map to the mitochondrial genome
+- Low-quality / dying cells often exhibit extensive mitochondrial contamination
+- We calculate mitochondrial QC metrics with the PercentageFeatureSet() function, which calculates the percentage of counts originating from a set of features
+- We use the set of all genes starting with MT- as a set of mitochondrial genes
+
+The number of unique genes and total molecules are automatically calculated during CreateSeuratObject(). You can find them stored in the object meta data.
+
+In the example below, we visualize QC metrics, and use these to filter cells. We filter cells that have unique feature counts over 2,500 or less than 200. We filter cells that have >5% mitochondrial counts.
+
+```{r}
+#| label: QC metrics
+#| echo: true
+#| eval: true
+#| code-copy: true
+
+# The [[ operator can add columns to object metadata. This is a great place to stash QC stats
+pbmc[["percent.mt"]] <- PercentageFeatureSet(pbmc, pattern = "^MT-")
+
+# Show QC metrics for the first 5 cells
+head(pbmc@meta.data, 5)
+
+# Visualize QC metrics as a violin plot
+VlnPlot(pbmc, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"), ncol = 3)
+
+# FeatureScatter is typically used to visualize feature-feature relationships, but can be used
+# for anything calculated by the object, i.e. columns in object metadata, PC scores etc.
+
+plot1 <- FeatureScatter(pbmc, feature1 = "nCount_RNA", feature2 = "percent.mt")
+plot2 <- FeatureScatter(pbmc, feature1 = "nCount_RNA", feature2 = "nFeature_RNA")
+plot1 + plot2
+
+pbmc <- subset(pbmc, subset = nFeature_RNA > 200 & nFeature_RNA < 2500 & percent.mt < 5)
+
+```
+
+### Normalizing the data
+
+After removing unwanted cells from the dataset, the next step is to normalize the data. By default, we employ a global-scaling normalization method “LogNormalize” that normalizes the feature expression measurements for each cell by the total expression, multiplies this by a scale factor (10,000 by default), and log-transforms the result. In Seurat v5, Normalized values are stored in `pbmc[["RNA"]]$data`.
+
+```{r}
+#| label: LogNormalize
+#| echo: true
+#| eval: true
+#| code-copy: true
+
+pbmc <- NormalizeData(pbmc, normalization.method = "LogNormalize", scale.factor = 10000)
+```
+
+While this method of normalization is standard and widely used in scRNA-seq analysis, global-scaling relies on an assumption that each cell originally contains the same number of RNA molecules. We and others have developed alternative workflows for the single cell preprocessing that do not make these assumptions. For users who are interested, please check out our `SCTransform()` normalization workflow. The method is described in our [paper](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-021-02584-9), with a separate vignette using Seurat [here](https://satijalab.org/seurat/articles/sctransform_vignette). The use of SCTransform replaces the need to run `NormalizeData`, `FindVariableFeatures`, or `ScaleData`.
+
+### Identification of highly variable features (feature selection)
+
+We next calculate a subset of features that exhibit high cell-to-cell variation in the dataset (i.e, they are highly expressed in some cells, and lowly expressed in others). We and others have found that focusing on these genes in downstream analysis helps to highlight biological signal in single-cell datasets.
+
+Our procedure in Seurat is described in detail [here](https://doi.org/10.1016/j.cell.2019.05.031), and improves on previous versions by directly modeling the mean-variance relationship inherent in single-cell data, and is implemented in the `FindVariableFeatures()` function. By default, we return 2,000 features per dataset. These will be used in downstream analysis, like PCA.
+
+```{r}
+#| label: VariableFeatures
+#| echo: true
+#| eval: true
+#| code-copy: true 
+
+pbmc <- FindVariableFeatures(pbmc, selection.method = "vst", nfeatures = 2000)
+
+# Identify the 10 most highly variable genes
+top10 <- head(VariableFeatures(pbmc), 10)
+
+# plot variable features with and without labels
+plot3 <- VariableFeaturePlot(pbmc)
+plot4 <- LabelPoints(plot = plot3, points = top10, repel = TRUE)
+plot3 + plot4
+```
+### Scaling the data
+
+Next, we apply a linear transformation (‘scaling’) that is a standard pre-processing step prior to dimensional reduction techniques like PCA. The `ScaleData()` function:
+
+- Shifts the expression of each gene, so that the mean expression across cells is 0
+- Scales the expression of each gene, so that the variance across cells is 1
+- This step gives equal weight in downstream analyses, so that highly-expressed genes do not dominate
+- The results of this are stored in `pbmc[["RNA"]]$scale.data`
+
+By default, only variable features are scaled.
+You can specify the `features` argument to scale additional features
+
+```{r}
+#| label: Scaling
+#| echo: true
+#| eval: true
+#| code-copy: true 
+
+all.genes <- rownames(pbmc)
+pbmc <- ScaleData(pbmc, features = all.genes)
+```
+
+In Seurat, we also use the `ScaleData()` function to remove unwanted sources of variation from a single-cell dataset. For example, we could ‘regress out’ heterogeneity associated with (for example) cell cycle stage, or mitochondrial contamination i.e.:
+
+`pbmc <- ScaleData(pbmc, vars.to.regress = "percent.mt")`
+
+However, particularly for advanced users who would like to use this functionality, we strongly recommend the use of our new normalization workflow, `SCTransform()`. The method is described in our paper, with a separate vignette using Seurat here. As with `ScaleData()`, the function `SCTransform()` also includes a `vars.to.regress` parameter.
+
+### Perform linear dimensional reduction
 
