--- a/Seurat tutorial 1 pbmc3k.qmd
+++ b/Seurat tutorial 1 pbmc3k.qmd
@@ -1,16 +1,30 @@
 ---
 title: "Seurat tutorial 1 - pbmc3k"
 subtitle: "Sep 2024"
-author: "Scot J Matkovich (notes)"
-format: html
+author: "Satija lab (original); Scot J Matkovich (notes)"
+format:
+  gfm: default
+  html:
+    embed-resources: true
+    toc: true
+    toc_float: true
+    toc-depth: 3
+    toc-expand: 3
+    toc-location: right
 editor: visual
+execute:
+  cache: false
+  keep-md: false
+output:
+  html: default
+  gfm: default
 ---
 
-## pbmc3k - guided clustering tutorial
+# pbmc3k - guided clustering tutorial
 
 Original sources: [R markdown](https://github.com/satijalab/seurat/blob/HEAD/vignettes/pbmc3k_tutorial.Rmd) and [webpage](https://satijalab.org/seurat/articles/pbmc3k_tutorial)
 
-### Set up the Seurat object
+## Set up the Seurat object
 
 For this tutorial, we will be analyzing the a dataset of Peripheral Blood Mononuclear Cells (PBMC) freely available from 10X Genomics. There are 2,700 single cells that were sequenced on the Illumina NextSeq 500.\
 
@@ -22,6 +36,7 @@ We next use the count matrix to create a Seurat object. The object serves as a c
 #| label: data import
 #| echo: true
 #| eval: true
+#| message: false
 #| code-copy: true
 
 library(dplyr)
@@ -29,6 +44,7 @@ library(Seurat)
 library(patchwork)
 
 work.dir <- "C:/Downloads/"
+if (!dir.exists(file.path(work.dir,"output"))) dir.create(file.path(work.dir,"output"))
 
 # Load the PBMC dataset
 if (!dir.exists(file.path(work.dir,"pbmc3k_filtered_gene_bc_matrices/filtered_gene_bc_matrices/hg19/"))) {
@@ -53,18 +69,18 @@ pbmc
 
 Seurat allows you to easily explore QC metrics and filter cells based on any user-defined criteria. A few QC metrics commonly used by the community include:
 
-- The number of unique genes detected in each cell.
-- Low-quality cells or empty droplets will often have very few genes
-- Cell doublets or multiplets may exhibit an aberrantly high gene count
-- Similarly, the total number of molecules detected within a cell (correlates strongly with unique genes)
-- The percentage of reads that map to the mitochondrial genome
-- Low-quality / dying cells often exhibit extensive mitochondrial contamination
-- We calculate mitochondrial QC metrics with the PercentageFeatureSet() function, which calculates the percentage of counts originating from a set of features
-- We use the set of all genes starting with MT- as a set of mitochondrial genes
+* The number of unique genes detected in each cell.
+* Low-quality cells or empty droplets will often have very few genes
+* Cell doublets or multiplets may exhibit an aberrantly high gene count
+* Similarly, the total number of molecules detected within a cell (correlates strongly with unique genes)
+* The percentage of reads that map to the mitochondrial genome
+* Low-quality / dying cells often exhibit extensive mitochondrial contamination
+* We calculate mitochondrial QC metrics with the PercentageFeatureSet() function, which calculates the percentage of counts originating from a set of features
+* We use the set of all genes starting with MT- as a set of mitochondrial genes
 
 The number of unique genes and total molecules are automatically calculated during CreateSeuratObject(). You can find them stored in the object meta data.
 
-In the example below, we visualize QC metrics, and use these to filter cells. We filter cells that have unique feature counts over 2,500 or less than 200. We filter cells that have >5% mitochondrial counts.
+In the example below, we visualize QC metrics, and use these to filter cells. We filter cells that have unique feature counts over 2,500 or less than 200. We filter cells that have \>5% mitochondrial counts.
 
 ```{r}
 #| label: QC metrics
@@ -129,17 +145,17 @@ plot3 <- VariableFeaturePlot(pbmc)
 plot4 <- LabelPoints(plot = plot3, points = top10, repel = TRUE)
 plot3 + plot4
 ```
+
 ### Scaling the data
 
 Next, we apply a linear transformation (‘scaling’) that is a standard pre-processing step prior to dimensional reduction techniques like PCA. The `ScaleData()` function:
 
-- Shifts the expression of each gene, so that the mean expression across cells is 0
-- Scales the expression of each gene, so that the variance across cells is 1
-- This step gives equal weight in downstream analyses, so that highly-expressed genes do not dominate
-- The results of this are stored in `pbmc[["RNA"]]$scale.data`
+* Shifts the expression of each gene, so that the mean expression across cells is 0
+* Scales the expression of each gene, so that the variance across cells is 1
+* This step gives equal weight in downstream analyses, so that highly-expressed genes do not dominate
+* The results of this are stored in `pbmc[["RNA"]]$scale.data`
 
-By default, only variable features are scaled.
-You can specify the `features` argument to scale additional features
+By default, only variable features are scaled. You can specify the `features` argument to scale additional features
 
 ```{r}
 #| label: Scaling
@@ -157,7 +173,7 @@ In Seurat, we also use the `ScaleData()` function to remove unwanted sources of 
 
 However, particularly for advanced users who would like to use this functionality, we strongly recommend the use of our new normalization workflow, `SCTransform()`. The method is described in our paper, with a separate vignette using Seurat here. As with `ScaleData()`, the function `SCTransform()` also includes a `vars.to.regress` parameter.
 
-### Perform linear dimensional reduction
+## Perform linear dimensional reduction
 
 Next we perform PCA on the scaled data. By default, only the previously determined variable features are used as input, but can be defined using `features` argument if you wish to choose a different subset (if you do want to use a custom subset of features, make sure you pass these to `ScaleData` first).
 
@@ -201,9 +217,9 @@ Identifying the true dimensionality of a dataset – can be challenging/uncertai
 
 We chose 10 here, but encourage users to consider the following:
 
-- Dendritic cell and NK aficionados may recognize that genes strongly associated with PCs 12 and 13 define rare immune subsets (i.e. MZB1 is a marker for plasmacytoid DCs). However, these groups are so rare, they are difficult to distinguish from background noise for a dataset of this size without prior knowledge.
-- We encourage users to repeat downstream analyses with a different number of PCs (10, 15, or even 50!). As you will observe, the results often do not differ dramatically.
-- We advise users to err on the higher side when choosing this parameter. For example, performing downstream analyses with only 5 PCs does significantly and adversely affect results.
+* Dendritic cell and NK aficionados may recognize that genes strongly associated with PCs 12 and 13 define rare immune subsets (i.e. MZB1 is a marker for plasmacytoid DCs). However, these groups are so rare, they are difficult to distinguish from background noise for a dataset of this size without prior knowledge.
+* We encourage users to repeat downstream analyses with a different number of PCs (10, 15, or even 50!). As you will observe, the results often do not differ dramatically.
+* We advise users to err on the higher side when choosing this parameter. For example, performing downstream analyses with only 5 PCs does significantly and adversely affect results.
 
 ```{r}
 #| label: Minimum dimensionality
@@ -213,3 +229,210 @@ We chose 10 here, but encourage users to consider the following:
 
 ElbowPlot(pbmc)
 ```
+
+Identifying the true dimensionality of a dataset -- can be challenging/uncertain for the user. We therefore suggest these multiple approaches for users. The first is more supervised, exploring PCs to determine relevant sources of heterogeneity, and could be used in conjunction with GSEA for example. The second (`ElbowPlot`) The third is a heuristic that is commonly used, and can be calculated instantly. In this example, we might have been justified in choosing anything between PC 7-12 as a cutoff. 
+
+We chose 10 here, but encourage users to consider the following:
+
+* Dendritic cell and NK aficionados may recognize that genes strongly associated with PCs 12 and 13 define rare immune subsets (i.e. MZB1 is a marker for plasmacytoid DCs). However, these groups are so rare, they are difficult to distinguish from background noise for a dataset of this size without prior knowledge. 
+* We encourage users to repeat downstream analyses with a different number of PCs (10, 15, or even 50!). As you will observe, the results often do not differ dramatically.
+* We advise users to err on the higher side when choosing this parameter. For example, performing downstream analyses with only 5 PCs does significantly and adversely affect results.
+
+### Cluster the cells
+
+Seurat applies a graph-based clustering approach, building upon initial strategies in ([Macosko *et al*](http://www.cell.com/abstract/S0092-8674(15)00549-8)). Importantly, the *distance metric* which drives the clustering analysis (based on previously identified PCs) remains the same. However, our approach to partitioning the cellular distance matrix into clusters has dramatically improved. Our approach was heavily inspired by recent manuscripts which applied graph-based clustering approaches to scRNA-seq data [[SNN-Cliq, Xu and Su, Bioinformatics, 2015]](http://bioinformatics.oxfordjournals.org/content/early/2015/02/10/bioinformatics.btv088.abstract) and CyTOF data [[PhenoGraph, Levine *et al*., Cell, 2015]](http://www.ncbi.nlm.nih.gov/pubmed/26095251). Briefly, these methods embed cells in a graph structure - for example a K-nearest neighbor (KNN) graph, with edges drawn between cells with similar feature expression patterns, and then attempt to partition this graph into highly interconnected 'quasi-cliques' or 'communities'. 
+
+As in PhenoGraph, we first construct a KNN graph based on the euclidean distance in PCA space, and refine the edge weights between any two cells based on the shared overlap in their local neighborhoods (Jaccard similarity). This step is performed using the `FindNeighbors()` function, and takes as input the previously defined dimensionality of the dataset (first 10 PCs).
+
+To cluster the cells, we next apply modularity optimization techniques such as the Louvain algorithm (default) or SLM [[SLM, Blondel *et al*., Journal of Statistical Mechanics]](http://dx.doi.org/10.1088/1742-5468/2008/10/P10008), to iteratively group cells together, with the goal of optimizing the standard modularity function. The `FindClusters()` function implements this procedure, and contains a resolution parameter that sets the 'granularity' of the downstream clustering, with increased values leading to a greater number of clusters. We find that setting this parameter between 0.4-1.2 typically returns good results for single-cell datasets of around 3K cells. Optimal resolution often increases for larger datasets. The clusters can be found using the `Idents()` function.
+
+
+```{r}
+#| label: Cluster cells
+#| echo: true
+#| eval: true
+#| code-copy: true
+ 
+pbmc <- FindNeighbors(pbmc, dims = 1:10)
+pbmc <- FindClusters(pbmc, resolution = 0.5)
+
+# Look at cluster IDs of the first 5 cells
+head(Idents(pbmc), 5)
+```
+
+### Run non-linear dimensional reduction (UMAP/tSNE)
+
+Seurat offers several non-linear dimensional reduction techniques, such as tSNE and UMAP, to visualize and explore these datasets. The goal of these algorithms is to learn underlying structure in the dataset, in order to place similar cells together in low-dimensional space. Therefore, cells that are grouped together within graph-based clusters determined above should co-localize on these dimension reduction plots. 
+
+While we and others have routinely found 2D visualization techniques like tSNE and UMAP to be valuable tools for exploring datasets, all visualization techniques have limitations, and cannot fully represent the complexity of the underlying data. In particular, these methods aim to preserve local distances in the dataset (i.e. ensuring that cells with very similar gene expression profiles co-localize), but often do not preserve more global relationships. We encourage users to leverage techniques like UMAP for visualization, but to avoid drawing biological conclusions solely on the basis of visualization techniques. 
+
+```{r}
+#| label: umap with plot
+#| echo: true
+#| eval: true
+#| code-copy: true
+#| fig-height: 8
+#| fig-width: 8
+
+pbmc <- RunUMAP(pbmc, dims = 1:10)
+
+# note that you can set `label = TRUE` or use the LabelClusters function to help label individual clusters
+DimPlot(pbmc, reduction = 'umap')
+```
+
+You can save the object at this point so that it can easily be loaded back in without having to rerun the computationally intensive steps performed above, or easily shared with collaborators.
+
+```{r}
+#| label: save object
+#| echo: true
+#| eval: false
+#| code-copy: true
+saveRDS(pbmc, file = file.path(work.dir,"output/pbmc3k_tutorial.rds"))
+```
+
+## Finding differentially expressed features (cluster biomarkers)
+
+Seurat can help you find markers that define clusters via differential expression (DE). By default, it identifies positive and negative markers of a single cluster (specified in `ident.1`), compared to all other cells. `FindAllMarkers()` automates this process for all clusters, but you can also test groups of clusters vs. each other, or against all cells.
+
+In Seurat v5, we use the presto package (as described [here](https://www.biorxiv.org/content/10.1101/653253v1) and available for installation [here](https://github.com/immunogenomics/presto)), to dramatically improve the speed of DE analysis, particularly for large datasets. For users who are not using presto, you can examine the documentation for this function (`?FindMarkers`) to explore the `min.pct` and `logfc.threshold` parameters, which can be increased in order to increase the speed of DE testing.
+
+```{r}
+#| label: markers clusters 2+5
+#| echo: true
+#| eval: true
+#| code-copy: true
+
+# find all markers of cluster 2
+cluster2.markers <- FindMarkers(pbmc, ident.1 = 2)
+head(cluster2.markers, n = 5)
+# find all markers distinguishing cluster 5 from clusters 0 and 3
+cluster5.markers <- FindMarkers(pbmc, ident.1 = 5, ident.2 = c(0, 3))
+head(cluster5.markers, n = 5)
+# find markers for every cluster compared to all remaining cells, report only the positive ones with at least 2-fold difference
+pbmc.markers <- FindAllMarkers(pbmc, only.pos = TRUE)
+pbmc.markers |> 
+    group_by(cluster) |>
+    dplyr::filter(avg_log2FC > 1)
+```
+
+Seurat has several tests for differential expression which can be set with the test.use parameter (see our [DE vignette](de_vignette.html) for details). For example, the ROC test returns the 'classification power' for any individual marker (ranging from 0 - random, to 1 - perfect).
+
+Note the difference in the structure of the `cluster0.markers` object resulting from the ROC test compared to the previous `cluster2.markers` and `cluster5.markers` objects.
+
+```{r}
+#| label: markers roc
+#| echo: true
+#| eval: true
+#| code-copy: true
+
+cluster0.markers <- FindMarkers(pbmc, ident.1 = 0, logfc.threshold = 0.25, test.use = "roc", only.pos = TRUE)
+head(cluster0.markers, n = 5)
+```
+
+We include several tools for visualizing marker expression. `VlnPlot()` (shows expression probability distributions across clusters), and `FeaturePlot()` (visualizes feature expression on a tSNE or PCA plot) are our most commonly used visualizations. **We also suggest exploring `RidgePlot()`, `CellScatter()`, and `DotPlot()`** as additional methods to view your dataset.
+
+```{r}
+#| label: marker violin plots
+#| echo: true
+#| eval: true
+#| code-copy: true
+#| fig-height: 5
+#| fig-width: 10
+
+VlnPlot(pbmc, features = c("MS4A1", "CD79A"))
+# you can plot raw counts as well
+VlnPlot(pbmc, features = c("NKG7", "PF4"), slot = 'counts', log = TRUE)
+```
+
+```{r}
+#| label: marker feature plot
+#| echo: true
+#| eval: true
+#| code-copy: true
+#| fig-height: 8
+#| fig-width: 10
+
+FeaturePlot(pbmc, features = c("MS4A1", "GNLY", "CD3E", "CD14", "FCER1A", "FCGR3A", "LYZ", "PPBP", "CD8A"))
+```
+
+`DoHeatmap()` generates an expression heatmap for given cells and features. In this case, we are plotting the top 20 markers (or all markers if less than 20) for each cluster. Note that the markers are filtered for at least 2-fold differences.
+
+```{r clusterHeatmap}
+#| label: cluster heatmap
+#| echo: true
+#| eval: true
+#| code-copy: true
+#| fig-height: 8
+#| fig-width: 10
+
+pbmc.markers |> 
+    group_by(cluster) |> 
+    dplyr::filter(avg_log2FC > 1) |> 
+    slice_head(n = 10)|> 
+    ungroup() -> top10
+DoHeatmap(pbmc, features = top10$gene) + NoLegend()
+```
+
+### Assigning cell type identity to clusters
+
+Fortunately in the case of this dataset, we can use canonical markers to easily match the unbiased clustering to known cell types:
+
+Cluster ID | Markers       | Cell Type
+-----------|---------------|----------
+0          | IL7R, CCR7    | Naive CD4+ T 
+1          | CD14, LYZ     | CD14+ Mono
+2          | IL7R, S100A4  | Memory CD4+ 
+3          | MS4A1         | B 
+4          | CD8A          | CD8+ T 
+5          | FCGR3A, MS4A7 | FCGR3A+ Mono
+6          | GNLY, NKG7    | NK 
+7          | FCER1A, CST3  | DC
+8          | PPBP          | Platelet
+
+
+```{r}
+#| label: labelled umap plot
+#| echo: true
+#| eval: true
+#| code-copy: true
+#| fig-height: 5
+#| fig-width: 9
+
+new.cluster.ids <- c("Naive CD4 T", "CD14+ Mono", "Memory CD4 T", "B", "CD8 T", "FCGR3A+ Mono", "NK", "DC", "Platelet")
+names(new.cluster.ids) <- levels(pbmc)
+pbmc <- RenameIdents(pbmc, new.cluster.ids)
+DimPlot(pbmc, reduction = 'umap', label = TRUE, pt.size = 0.5) + NoLegend()
+```
+
+The above plot could be modified using `ggplot2` parameters and saved as a graphic file.
+
+```{r}
+#| label: save image
+#| echo: true
+#| eval: false
+#| code-copy: true
+
+library(ggplot2)
+plot <- DimPlot(pbmc, reduction = "umap", label = TRUE, label.size = 4.5) + xlab("UMAP 1") + ylab("UMAP 2") + 
+  theme(axis.title = element_text(size = 18), legend.text = element_text(size = 18)) + 
+  guides(colour = guide_legend(override.aes = list(size = 10)))
+ggsave(filename = file.path(work.dir,"output/pbmc3k_umap.jpg"), height = 7, width = 12, plot = plot, quality = 50)
+```
+
+All the calculations and modifications performed to the Seurat object could be saved to facilitate future work.
+
+```{r}
+#| label: save final rds
+#| echo: true
+#| eval: true
+#| code-copy: true
+
+saveRDS(pbmc, file = file.path(work.dir,"output/pbmc3k_final.rds"))
+```
+
+<details>
+  <summary>**Session Info**</summary>
+```{r}
+sessionInfo()
+```
+</details>
