--- a/Seurat tutorial 1 pbmc3k.qmd
+++ b/Seurat tutorial 1 pbmc3k.qmd
@@ -261,7 +261,7 @@ pbmc <- FindClusters(pbmc, resolution = 0.5)
 head(Idents(pbmc), 5)
 ```
 
-### Run non-linear dimensional reduction (UMAP/tSNE)
+## Run non-linear dimensional reduction (UMAP/tSNE)
 
 Seurat offers several non-linear dimensional reduction techniques, such as tSNE and UMAP, to visualize and explore these datasets. The goal of these algorithms is to learn underlying structure in the dataset, in order to place similar cells together in low-dimensional space. Therefore, cells that are grouped together within graph-based clusters determined above should co-localize on these dimension reduction plots.
 
